Marking up header

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>Powell Peralta Skateboards</title>
+    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="/app.css">
   </head>
   <body>
+    <main class="container">
+      <header>
+        <div class="connect">
+          <a href="#">Subscribe</a>
+          <a href="#">Facebook</a>
+          <a href="#">RSS</a>
+          <a href="#">Twitter</a>
+          <a href="#">YouTube</a>
+        </div>
+        <nav>
+          <ul>
+            <li>Sk8t News</li>
+            <li>Skateboarders</li>
+            <li>Board Design</li>
+            <li>Contact Us</li>
+          </ul>
+        </nav>
+        <section class="hero">
+          <img class="hero_logo" src="img/peralta-logo.png" alt="Company Logo">
+          <img class="hero_bg" src="img/top-image.png" alt="Black/White Photo">
+          <button type="radio" name="selector"></button>
+          <button type="radio" name="selector"></button>
+          <button type="radio" name="selector"></button>
+        </section>
+      </header>
+
+
+    </main>
 
   </body>
 </html>
