--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,39 @@
           <button type="radio" name="selector"></button>
         </section>
       </header>
+      <article class="article_grid">
+        <div class="three-up">
+          <h2>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h2>
+          <h4>October 10, 2013</h4>
+          <p>
+            It was just over 90 degrees in Los Angeles, but that didn't stop the
+            throngs from coming out to celebrate the 10th Annual Tony Hawk's
+            Stand Up For Skateparks Benefit Presented by SLS Hotel & Casino Las
+            Vegas on Saturday at the Green Acres Estate in Beverly Hills.
+          </p>
+          <a href="#">Read More</a>
+          <h2>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h2>
+          <h4>March 10, 2013</h4>
+          <p>
+            The last thing Rodney Mullen, the godfather of street skating, wanted
+            were competitive victories. In this exuberant talk he shares his love
+            of the open skateboarding community and how the unique environments
+            it plays in drive the creation of new tricks--fostering...
+          </p>
+          <a href="#">Read More</a>
+          <h2>Ray Barbee Talks 'Ban This'</h2>
+          <h4>October 4, 2013</h4>
+          <p>
+            Since filming is in full swing for the Vans Video Adventures With Chris
+            has taken the opportunity to sit some of the team down to look behind
+            the skating of some of their earlier parts. Today we sit down Ray
+            Barbee, one of the smoothest guys to ever step on a skateboard and
+            Chris' childhood idol...
+          <a href="#">Read More</a>
+        </div>
+
+      </article>
+
 
 
     </main>
