Marking up Skater Pics

--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,19 @@
             Chris' childhood idol...
           <a href="#">Read More</a>
         </div>
-
       </article>
+      <section class="skater_grid">
+        <h2>SKATEBOARDERS</h2>
+        <a class="small_pic" href="#"><img src="img/sk8er-4.png" alt="Photo of Lance">
+          <h1>Lance Mountain</h1></a>
+        <a class="small_pic" href="#"><img src="img/sk8er-3.png" alt="Photo of Rodney">
+          <h1>Roney Mullen</h1></a>
+        <a class="tall_pic" href="#"><img src="img/sk8er-2.png" alt="Photo of Tommy">
+          <h1>Tommy Guerrero</h1></a>
+        <a class="wide_pic" href="#"><img src="img/sk8er-1.png" alt="Photo of Steve">
+          <h1>Steve Caballero</h1></a>
+      </section>
+
 
 
 
