marking up skateboard section

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="container">
       <header>
-        <div class="connect">
+        <div class="top_connect">
           <a href="#">Subscribe</a>
           <a href="#">Facebook</a>
           <a href="#">RSS</a>
@@ -74,6 +74,22 @@
         <a class="wide_pic" href="#"><img src="img/sk8er-1.png" alt="Photo of Steve">
           <h1>Steve Caballero</h1></a>
       </section>
+      <section class="skateboard_grid">
+        <img src="img/sk8-1.png" alt="Image of Skateboard">
+        <img src="img/sk8-2.png" alt="Image of Skateboard">
+        <img src="img/sk8-3.png" alt="Image of Skateboard">
+        <img src="img/sk8-4.png" alt="Image of Skateboard">
+        <img src="img/sk8-5.png" alt="Image of Skateboard">
+        <img src="img/sk8-6.png" alt="Image of Skateboard">
+        <img src="img/sk8-7.png" alt="Image of Skateboard">
+        <img src="img/sk8-8.png" alt="Image of Skateboard">
+        <img src="img/sk8-9.png" alt="Image of Skateboard">
+        <img src="img/sk8-10.png" alt="Image of Skateboard">
+      </section>
+
+
+      </section>
+
 
 
 
