Adding Contact Form

--- a/public/index.html
+++ b/public/index.html
@@ -86,8 +86,26 @@
         <img src="img/sk8-9.png" alt="Image of Skateboard">
         <img src="img/sk8-10.png" alt="Image of Skateboard">
       </section>
-
-
+      <section class="bottom_connect">
+        <div class="site_info">
+          <h2>Contact Us for More Information</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat.
+            <a href="#">Facebook</a>
+            <a href="#">RSS</a>
+            <a href="#">Twitter</a>
+            <a href="#">YouTube</a>
+          </p>
+          <div class="contact_form">
+            <input type="text" id="name" />
+            <input type="text" id="email" />
+            <input type="text" id="your message" />
+            <button>SUBMIT</button>
+          </div>
+        </div>
       </section>
 
 
