adding icons and global text decoration rules

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,14 @@
       <header>
         <div class="top_connect">
           <a href="#">Subscribe</a>
-          <a href="#">Facebook</a>
-          <a href="#">RSS</a>
-          <a href="#">Twitter</a>
-          <a href="#">YouTube</a>
+          <a href="https://www.facebook.com/powellperalta/?fref=ts">
+            <span class="fa fa-facebook"></span>Facebook</a>
+          <a href="http://powell-peralta.com/rss/">
+            <span class="fa fa-rss"></span>RSS</a>
+          <a href="https://twitter.com/PowellPeralta">
+            <span class="fa fa-twitter"></span>Twitter</a>
+          <a href="https://www.youtube.com/PowellPeralta">
+            <span class="fa fa-youtube"></span>YouTube</a>
         </div>
         <nav>
           <ul>
