--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <main class="container">
       <header>
         <div class="top_connect">
-          <a href="#">Subscribe</a>
-          <a href="https://www.facebook.com/powellperalta/?fref=ts">
+          <a class="sub_link" href="#">Subscribe</a>
+          <a class="social_link" href="https://www.facebook.com/powellperalta/?fref=ts">
             <span class="fa fa-facebook"></span>Facebook</a>
-          <a href="http://powell-peralta.com/rss/">
+          <a class="social_link" href="http://powell-peralta.com/rss/">
             <span class="fa fa-rss"></span>RSS</a>
-          <a href="https://twitter.com/PowellPeralta">
+          <a class="social_link" href="https://twitter.com/PowellPeralta">
             <span class="fa fa-twitter"></span>Twitter</a>
-          <a href="https://www.youtube.com/PowellPeralta">
+          <a class="social_link" href="https://www.youtube.com/PowellPeralta">
             <span class="fa fa-youtube"></span>YouTube</a>
         </div>
         <nav>
@@ -31,9 +31,9 @@
         <section class="hero">
           <img class="hero_logo" src="img/peralta-logo.png" alt="Company Logo">
           <img class="hero_bg" src="img/top-image.png" alt="Black/White Photo">
-          <button type="radio" name="selector"></button>
-          <button type="radio" name="selector"></button>
-          <button type="radio" name="selector"></button>
+            <button type="radio" name="selector"></button>
+            <button type="radio" name="selector"></button>
+            <button type="radio" name="selector"></button>
         </section>
       </header>
       <article class="article_grid">
