styling navbar items

--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
           <a class="social_link" href="https://www.youtube.com/PowellPeralta">
             <span class="fa fa-youtube"></span>YouTube</a>
         </div>
-        <nav>
+        <div class="nav_items">
           <ul>
             <li>Sk8t News</li>
             <li>Skateboarders</li>
             <li>Board Design</li>
             <li>Contact Us</li>
           </ul>
-        </nav>
+        </div>
         <section class="hero">
           <img class="hero_logo" src="img/peralta-logo.png" alt="Company Logo">
           <img class="hero_bg" src="img/top-image.png" alt="Black/White Photo">
