styling background photo

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,11 @@
         <section class="hero">
           <img class="hero_logo" src="img/peralta-logo.png" alt="Company Logo">
           <img class="hero_bg" src="img/top-image.png" alt="Black/White Photo">
+          <radio class="radio_btns">
             <button type="radio" name="selector"></button>
             <button type="radio" name="selector"></button>
             <button type="radio" name="selector"></button>
+          </radio>
         </section>
       </header>
       <article class="article_grid">
