--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
         <div class="top_connect">
           <a class="sub_link" href="#">Subscribe</a>
           <a class="social_link" href="https://www.facebook.com/powellperalta/?fref=ts">
-            <span class="fa fa-facebook"></span>Facebook</a>
+            <span class="fa fa-facebook"></span></a>
           <a class="social_link" href="http://powell-peralta.com/rss/">
-            <span class="fa fa-rss"></span>RSS</a>
+            <span class="fa fa-rss"></span></a>
           <a class="social_link" href="https://twitter.com/PowellPeralta">
-            <span class="fa fa-twitter"></span>Twitter</a>
+            <span class="fa fa-twitter"></span></a>
           <a class="social_link" href="https://www.youtube.com/PowellPeralta">
-            <span class="fa fa-youtube"></span>YouTube</a>
+            <span class="fa fa-youtube"></span></a>
         </div>
         <div class="nav_items">
           <ul>
