modifying markup based on instructor recommendations

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,18 @@
   <body>
     <main class="container">
       <header>
-        <div class="top_connect">
-          <a class="sub_link" href="#">Subscribe</a>
-          <a class="social_link" href="https://www.facebook.com/powellperalta/?fref=ts">
+        <div class="top-connect">
+          <a class="sub-link" href="#">Subscribe</a>
+          <a class="social-link" href="https://www.facebook.com/powellperalta/?fref=ts">
             <span class="fa fa-facebook"></span></a>
-          <a class="social_link" href="http://powell-peralta.com/rss/">
+          <a class="social-link" href="http://powell-peralta.com/rss/">
             <span class="fa fa-rss"></span></a>
-          <a class="social_link" href="https://twitter.com/PowellPeralta">
+          <a class="social-link" href="https://twitter.com/PowellPeralta">
             <span class="fa fa-twitter"></span></a>
-          <a class="social_link" href="https://www.youtube.com/PowellPeralta">
+          <a class="social-link" href="https://www.youtube.com/PowellPeralta">
             <span class="fa fa-youtube"></span></a>
         </div>
-        <div class="nav_items">
+        <div class="nav-items">
           <ul>
             <li>Sk8t News</li>
             <li>Skateboarders</li>
@@ -29,16 +29,16 @@
           </ul>
         </div>
         <section class="hero">
-          <img class="hero_logo" src="img/peralta-logo.png" alt="Company Logo">
-          <img class="hero_bg" src="img/top-image.png" alt="Black/White Photo">
-          <radio class="radio_btns">
-            <button type="radio" name="selector"></button>
-            <button type="radio" name="selector"></button>
-            <button type="radio" name="selector"></button>
-          </radio>
+          <img class="hero-logo" src="img/peralta-logo.png" alt="Company Logo">
+          <img class="hero-bg" src="img/top-image.png" alt="Black/White Photo">
         </section>
+          <radio class="radio-btns">
+            <input type="radio" name="name" value="">
+            <input type="radio" name="name" value="">
+            <input type="radio" name="name" value="">
+          </radio>
       </header>
-      <article class="article_grid">
+      <article class="article-grid">
         <div class="three-up">
           <h2>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h2>
           <h4>October 10, 2013</h4>
@@ -49,6 +49,8 @@
             Vegas on Saturday at the Green Acres Estate in Beverly Hills.
           </p>
           <a href="#">Read More</a>
+        </div>
+        <div class="three-up">
           <h2>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h2>
           <h4>March 10, 2013</h4>
           <p>
@@ -58,6 +60,8 @@
             it plays in drive the creation of new tricks--fostering...
           </p>
           <a href="#">Read More</a>
+        </div>
+        <div class="three-up">
           <h2>Ray Barbee Talks 'Ban This'</h2>
           <h4>October 4, 2013</h4>
           <p>
@@ -69,18 +73,18 @@
           <a href="#">Read More</a>
         </div>
       </article>
-      <section class="skater_grid">
+      <section class="skater-grid">
         <h2>SKATEBOARDERS</h2>
-        <a class="small_pic" href="#"><img src="img/sk8er-4.png" alt="Photo of Lance">
+        <a class="small-pic" href="#"><img src="img/sk8er-4.png" alt="Photo of Lance">
           <h1>Lance Mountain</h1></a>
-        <a class="small_pic" href="#"><img src="img/sk8er-3.png" alt="Photo of Rodney">
+        <a class="small-pic" href="#"><img src="img/sk8er-3.png" alt="Photo of Rodney">
           <h1>Roney Mullen</h1></a>
-        <a class="tall_pic" href="#"><img src="img/sk8er-2.png" alt="Photo of Tommy">
+        <a class="tall-pic" href="#"><img src="img/sk8er-2.png" alt="Photo of Tommy">
           <h1>Tommy Guerrero</h1></a>
-        <a class="wide_pic" href="#"><img src="img/sk8er-1.png" alt="Photo of Steve">
+        <a class="wide-pic" href="#"><img src="img/sk8er-1.png" alt="Photo of Steve">
           <h1>Steve Caballero</h1></a>
       </section>
-      <section class="skateboard_grid">
+      <section class="skateboard-grid">
         <img src="img/sk8-1.png" alt="Image of Skateboard">
         <img src="img/sk8-2.png" alt="Image of Skateboard">
         <img src="img/sk8-3.png" alt="Image of Skateboard">
@@ -92,20 +96,21 @@
         <img src="img/sk8-9.png" alt="Image of Skateboard">
         <img src="img/sk8-10.png" alt="Image of Skateboard">
       </section>
-      <section class="bottom_connect">
-        <div class="site_info">
+      <section class="bottom-connect">
+        <div class="site-info">
           <h2>Contact Us for More Information</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-            enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat.
-            <a href="#">Facebook</a>
-            <a href="#">RSS</a>
-            <a href="#">Twitter</a>
-            <a href="#">YouTube</a>
-          </p>
-          <div class="contact_form">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+              <a href="#">Facebook</a>
+              <a href="#">RSS</a>
+              <a href="#">Twitter</a>
+              <a href="#">YouTube</a>
+            </p>
+          </div>
+          <div class="contact-form">
             <input type="text" id="name" />
             <input type="text" id="email" />
             <input type="text" id="your message" />
