Replacing images with cropped images

--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,11 @@
           <img class="hero-logo" src="img/peralta-logo.png" alt="Company Logo">
           <img class="hero-bg" src="img/top-image.png" alt="Black/White Photo">
         </section>
-          <radio class="radio-btns">
+          <div class="radio-btns">
             <input type="radio" name="name" value="">
             <input type="radio" name="name" value="">
             <input type="radio" name="name" value="">
-          </radio>
+          </div>
       </header>
       <article class="article-grid">
         <div class="three-up">
@@ -48,7 +48,7 @@
             Stand Up For Skateparks Benefit Presented by SLS Hotel & Casino Las
             Vegas on Saturday at the Green Acres Estate in Beverly Hills.
           </p>
-          <a href="#">Read More</a>
+          <span class="article-link"><a href="#">Read More</a></span>
         </div>
         <div class="three-up">
           <h2>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h2>
