modifing html to include brackets around text of links

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             Stand Up For Skateparks Benefit Presented by SLS Hotel & Casino Las
             Vegas on Saturday at the Green Acres Estate in Beverly Hills.
           </p>
-          <span class="article-link"><a href="#">Read More</a></span>
+          <span class="article-link"><a href="#">[ Read More ]</a></span>
         </div>
         <div class="three-up">
           <h2>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h2>
@@ -59,7 +59,7 @@
             of the open skateboarding community and how the unique environments
             it plays in drive the creation of new tricks--fostering...
           </p>
-          <a href="#">Read More</a>
+          <a href="#">[ Read More ]</a>
         </div>
         <div class="three-up">
           <h2>Ray Barbee Talks 'Ban This'</h2>
