--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
         </div>
         <div class="nav-items">
           <ul>
-            <li>Sk8t News</li>
-            <li>Skateboarders</li>
-            <li>Board Design</li>
-            <li>Contact Us</li>
+            <li>&mdash; Sk8t News &mdash;</li>
+            <li>&mdash; Skateboarders &mdash;</li>
+            <li>&mdash; Board Design &mdash;</li>
+            <li>&mdash; Contact Us &mdash;</li>
           </ul>
         </div>
         <section class="hero">
@@ -48,7 +48,7 @@
             Stand Up For Skateparks Benefit Presented by SLS Hotel & Casino Las
             Vegas on Saturday at the Green Acres Estate in Beverly Hills.
           </p>
-          <span class="article-link"><a href="#">[ Read More ]</a></span>
+            <a class="article-link" href="#">[ Read More ]</a>
         </div>
         <div class="three-up">
           <h2>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h2>
@@ -59,7 +59,7 @@
             of the open skateboarding community and how the unique environments
             it plays in drive the creation of new tricks--fostering...
           </p>
-          <a href="#">[ Read More ]</a>
+            <a class="article-link" href="#">[ Read More ]</a>
         </div>
         <div class="three-up">
           <h2>Ray Barbee Talks 'Ban This'</h2>
@@ -70,7 +70,8 @@
             the skating of some of their earlier parts. Today we sit down Ray
             Barbee, one of the smoothest guys to ever step on a skateboard and
             Chris' childhood idol...
-          <a href="#">Read More</a>
+          </p>
+            <a class="article-link" href="#">[ Read More ]</a>
         </div>
       </article>
       <section class="skater-grid">
