Including new cropped images for sizing ease

--- a/public/index.html
+++ b/public/index.html
@@ -76,14 +76,22 @@
       </article>
       <section class="skater-grid">
         <h2>SKATEBOARDERS</h2>
-        <a class="small-pic" href="#"><img src="img/sk8er-4.png" alt="Photo of Lance">
-          <h1>Lance Mountain</h1></a>
-        <a class="small-pic" href="#"><img src="img/sk8er-3.png" alt="Photo of Rodney">
-          <h1>Roney Mullen</h1></a>
-        <a class="tall-pic" href="#"><img src="img/sk8er-2.png" alt="Photo of Tommy">
-          <h1>Tommy Guerrero</h1></a>
-        <a class="wide-pic" href="#"><img src="img/sk8er-1.png" alt="Photo of Steve">
-          <h1>Steve Caballero</h1></a>
+      <div class="img-grid__sec">
+        <h1>Lance Mountain</h1>
+        <img src="img/sk8er-4.png" alt="Photo of Lance">
+      </div>
+      <div class="img-grid__sec">
+        <h1>Roney Mullen</h1>
+        <img src="img/sk8er-3.png" alt="Photo of Rodney">
+      </div>
+      <div class="img-grid__sec--tall">
+        <h1>Tommy Guerrero</h1>
+        <img src="img/sk8er-2.png" alt="Photo of Tommy">
+      </div>
+      <div class="img-grid__sec--wide">
+        <h1>Steve Caballero</h1>
+        <img src="img/sk8er-1.png" alt="Photo of Steve">
+      </div>
       </section>
       <section class="skateboard-grid">
         <img src="img/sk8-1.png" alt="Image of Skateboard">
