Adding cropped images

--- a/public/index.html
+++ b/public/index.html
@@ -78,19 +78,19 @@
         <h2>SKATEBOARDERS</h2>
       <div class="img-grid__sec">
         <h1>Lance Mountain</h1>
-        <img src="img/sk8er-4.png" alt="Photo of Lance">
+        <img src="img/sk8er-4.png" alt="Photo of Lance"/>
       </div>
       <div class="img-grid__sec">
         <h1>Roney Mullen</h1>
-        <img src="img/sk8er-3.png" alt="Photo of Rodney">
+        <img src="img/sk8er-3.png" alt="Photo of Rodney"/>
       </div>
-      <div class="img-grid__sec--tall">
+      <div class="img-grid__sec img-grid__sec--tall">
         <h1>Tommy Guerrero</h1>
-        <img src="img/sk8er-2.png" alt="Photo of Tommy">
+        <img src="img/sk8er-2.png" alt="Photo of Tommy"/>
       </div>
-      <div class="img-grid__sec--wide">
+      <div class="img-grid__sec img-grid__sec--wide">
         <h1>Steve Caballero</h1>
-        <img src="img/sk8er-1.png" alt="Photo of Steve">
+        <img src="img/sk8er-1.png" alt="Photo of Steve"/>
       </div>
       </section>
       <section class="skateboard-grid">
