Modifying HTML to separate images and headers

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
         <img src="img/sk8er-4.png" alt="Photo of Lance"/>
       </div>
       <div class="img-grid__sec">
-        <h1>Roney Mullen</h1>
+        <h1>Rodney Mullen</h1>
         <img src="img/sk8er-3.png" alt="Photo of Rodney"/>
       </div>
       <div class="img-grid__sec img-grid__sec--tall">
@@ -94,16 +94,16 @@
       </div>
       </section>
       <section class="skateboard-grid">
-        <img src="img/sk8-1.png" alt="Image of Skateboard">
-        <img src="img/sk8-2.png" alt="Image of Skateboard">
-        <img src="img/sk8-3.png" alt="Image of Skateboard">
-        <img src="img/sk8-4.png" alt="Image of Skateboard">
-        <img src="img/sk8-5.png" alt="Image of Skateboard">
-        <img src="img/sk8-6.png" alt="Image of Skateboard">
-        <img src="img/sk8-7.png" alt="Image of Skateboard">
-        <img src="img/sk8-8.png" alt="Image of Skateboard">
-        <img src="img/sk8-9.png" alt="Image of Skateboard">
-        <img src="img/sk8-10.png" alt="Image of Skateboard">
+        <img src="img/sk8-1.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-2.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-3.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-4.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-5.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-6.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-7.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-8.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-9.png" alt="Image of Skateboard"/>
+        <img src="img/sk8-10.png" alt="Image of Skateboard"/>
       </section>
       <section class="bottom-connect">
         <div class="site-info">
