Styling changes to fit all images on skater grid

--- a/public/index.html
+++ b/public/index.html
@@ -77,19 +77,19 @@
       <section class="skater-grid">
         <h2>SKATEBOARDERS</h2>
       <div class="img-grid__sec">
-        <h1>Lance Mountain</h1>
+        <a class="skater-name" href="#"><h1>Lance Mountain</h1></a>
         <img src="img/sk8er-4.png" alt="Photo of Lance"/>
       </div>
       <div class="img-grid__sec">
-        <h1>Rodney Mullen</h1>
+        <a class="skater-name" href="#"><h1>Rodney Mullen</h1></a>
         <img src="img/sk8er-3.png" alt="Photo of Rodney"/>
       </div>
       <div class="img-grid__sec img-grid__sec--tall">
-        <h1>Tommy Guerrero</h1>
+        <a class="skater-name" href="#"><h1>Tommy Guerrero</h1></a>
         <img src="img/sk8er-2.png" alt="Photo of Tommy"/>
       </div>
       <div class="img-grid__sec img-grid__sec--wide">
-        <h1>Steve Caballero</h1>
+        <a class="skater-name" href="#"><h1>Steve Caballero</h1></a>
         <img src="img/sk8er-1.png" alt="Photo of Steve"/>
       </div>
       </section>
