styling changes to header items

--- a/public/index.html
+++ b/public/index.html
@@ -85,11 +85,11 @@
         <img src="img/sk8er-3.png" alt="Photo of Rodney"/>
       </div>
       <div class="img-grid__sec img-grid__sec--tall">
-        <a class="skater-name" href="#"><h1>Tommy Guerrero</h1></a>
+        <a class="skater-name skater-name__tommy" href="#"><h1>Tommy Guerrero</h1></a>
         <img src="img/sk8er-2.png" alt="Photo of Tommy"/>
       </div>
       <div class="img-grid__sec img-grid__sec--wide">
-        <a class="skater-name" href="#"><h1>Steve Caballero</h1></a>
+        <a class="skater-name skater-name__steve" href="#"><h1>Steve Caballero</h1></a>
         <img src="img/sk8er-1.png" alt="Photo of Steve"/>
       </div>
       </section>
