Adding cropped image

--- a/public/index.html
+++ b/public/index.html
@@ -113,17 +113,23 @@
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
-              <a href="#">Facebook</a>
-              <a href="#">RSS</a>
-              <a href="#">Twitter</a>
-              <a href="#">YouTube</a>
             </p>
+              <a class="social-link" href="https://www.facebook.com/powellperalta/?fref=ts">
+                <span class="fa fa-facebook"></span></a>
+              <a class="social-link" href="http://powell-peralta.com/rss/">
+                <span class="fa fa-rss"></span></a>
+              <a class="social-link" href="https://twitter.com/PowellPeralta">
+                <span class="fa fa-twitter"></span></a>
+              <a class="social-link" href="https://www.youtube.com/PowellPeralta">
+                <span class="fa fa-youtube"></span></a>
           </div>
           <div class="contact-form">
-            <input type="text" id="name" />
-            <input type="text" id="email" />
-            <input type="text" id="your message" />
-            <button>SUBMIT</button>
+            <div class="contact-info">
+              <input type="text" id="name" />
+              <input type="text" id="email" />
+              <input type="text" id="your-message" />
+           </div>
+            <button class="sub-btn">SUBMIT</button>
           </div>
         </div>
       </section>
