--- a/public/index.html
+++ b/public/index.html
@@ -125,9 +125,9 @@
           </div>
           <div class="contact-form">
             <div class="contact-info">
-              <input type="text" id="name" />
-              <input type="text" id="email" />
-              <input type="text" id="your-message" />
+              <h3 class="label">Name<input type="text" id="name" /></h3>
+              <h3 class="label">Email<input type="text" id="email" /></h3>
+              <h3 class="label">Your Message<input type="text" id="your-message" /></h3>
            </div>
             <button class="sub-btn">SUBMIT</button>
           </div>
