mobile and tablet versions

--- a/public/index.html
+++ b/public/index.html
@@ -125,9 +125,9 @@
           </div>
           <div class="contact-form">
             <div class="contact-info">
-              <input type="text" id="name" />
-              <input type="text" id="email" />
-              <input type="text" id="your-message" />
+              <input type="text" id="name" placeholder="NAME"/>
+              <input type="text" id="email" placeholder="EMAIL"/>
+              <textarea type="text" id="your-message" placeholder="YOUR MESSAGE"></textarea>
            </div>
             <button class="sub-btn">SUBMIT</button>
           </div>
