--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             <input type="radio" name="name" value="">
           </div>
       </header>
-      <article class="article-grid">
+      <article class="article-grid clearfix">
         <div class="three-up">
           <h2>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h2>
           <h4>October 10, 2013</h4>
@@ -74,7 +74,7 @@
             <a class="article-link" href="#">[ Read More ]</a>
         </div>
       </article>
-      <section class="skater-grid">
+      <section class="skater-grid clearfix">
         <h2>SKATEBOARDERS</h2>
       <div class="img-grid__sec">
         <a class="skater-name" href="#"><h1>Lance Mountain</h1></a>
